plugins {
    id 'java'
    id 'application'
}

group = 'com.team'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
    }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.14.0'

    // Upgraded testing framework to fully support JDK 25 features
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
}

application {
    mainClass = 'Main'
}

run {
    standardInput = System.in
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
    // Show standard test output streams
    testLogging {
        showStandardStreams = true
    }
}